# wg-man

./: Cargo.toml  README.md
etc/conf.d/: wg-man
etc/init.d/: wg-man
src/: main.rs
util/: install-openrc.sh  install.sh
