[package]
name = "wg-man"
version = "0.1.0"
authors = ["Jacob Sinclair <jcbsnclr@outlook.com>"]
description = "WireGuard configuration manager"
repository = "https://github.com/jcbsnclr/wg-man"
license-file = "LICENSE"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["kv"] }
rand = "0.9.2"
regex = "1.12.2"
thiserror = "2.0.17"
